# learning-path-creator

./: README.md
learning_path_creator_crew/: .gitignore  README.md  pyproject.toml
learning_path_creator_crew/src/learning_path_creator_crew/: crew.py  main.py
learning_path_creator_crew/src/learning_path_creator_crew/config/: agents.yaml  settings.yaml  tasks.yaml
learning_path_creator_crew/src/learning_path_creator_crew/tools/: DuckDuckGoSearchTool.py
learning_path_creator_crew/src/learning_path_creator_crew/utils/: utils.py
